# sandbox

./: CMakeLists.txt  prj.conf
barcode/: CMakeLists.txt  prj.conf
barcode/barcode_module/zephyr/: Kconfig  e3000h.c  e3000h.h
barcode/barcode_module_driver/zephyr/: CMakeLists.txt  Kconfig  e3000h.c  e3000h.h
barcode/configuration/nrf52840dk_nrf52840/: app_ZDebug.conf  buttons_def.h  dts.overlay
barcode/dts/bindings/: yoko,e3000h.yaml
barcode/src/: main.c
barcode/src/modules/: ui_module.c
display/src/: main.c
src/: font_jet_brains_mono_bold_18.c  font_space_mono_regular_18.c  main.c  tictac.c
